WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278785
REGRESSION(
281966@main
): [Win] `PageClient::didPerformDragOperation()` is never called
https://bugs.webkit.org/show_bug.cgi?id=278785
Summary
REGRESSION(281966@main): [Win] `PageClient::didPerformDragOperation()` is nev...
Vitaly Dyackhov
Reported
2024-08-28 04:35:47 PDT
Before
281966@main
``` void WebPageProxy::performDragOperation(DragData& dragData, const String& dragStorageName, SandboxExtension::Handle&& sandboxExtensionHandle, Vector<SandboxExtension::Handle>&& sandboxExtensionsForUpload) { #if PLATFORM(COCOA) grantAccessToCurrentPasteboardData(dragStorageName); #endif #if PLATFORM(GTK) performDragControllerAction(DragControllerAction::PerformDragOperation, dragData); #else if (!hasRunningProcess()) return; sendWithAsyncReply(Messages::WebPage::PerformDragOperation(dragData, WTFMove(sandboxExtensionHandle), WTFMove(sandboxExtensionsForUpload)), [this, protectedThis = Ref { *this }] (bool handled) { protectedPageClient()->didPerformDragOperation(handled); }); #endif } ``` after ``` void WebPageProxy::performDragOperation(DragData& dragData, const String& dragStorageName, SandboxExtension::Handle&& sandboxExtensionHandle, Vector<SandboxExtension::Handle>&& sandboxExtensionsForUpload) { #if PLATFORM(GTK) performDragControllerAction(DragControllerAction::PerformDragOperation, dragData); #endif #if PLATFORM(COCOA) if (!hasRunningProcess()) return; grantAccessToCurrentPasteboardData(dragStorageName, [this, protectedThis = Ref { *this }, dragStorageName, dragData = WTFMove(dragData), sandboxExtensionHandle = WTFMove(sandboxExtensionHandle), sandboxExtensionsForUpload = WTFMove(sandboxExtensionsForUpload)] () mutable { sendWithAsyncReply(Messages::WebPage::PerformDragOperation(dragData, WTFMove(sandboxExtensionHandle), WTFMove(sandboxExtensionsForUpload)), [this, protectedThis = Ref { *this }] (bool handled) { protectedPageClient()->didPerformDragOperation(handled); }); }); #endif } ``` Note missing #else directive.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-08-28 04:45:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32822
EWS
Comment 2
2024-09-02 00:26:38 PDT
Committed
283050@main
(b9af02f5af3f): <
https://commits.webkit.org/283050@main
> Reviewed commits have been landed. Closing PR #32822 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-02 00:27:15 PDT
<
rdar://problem/135130132
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug