REGRESSION(281966@main): [Win] `PageClient::didPerformDragOperation()` is never called https://bugs.webkit.org/show_bug.cgi?id=278785

Reviewed by Fujii Hironori.

Add missing code branch for Windows.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::performDragOperation):

Canonical link: https://commits.webkit.org/283050@main